# multi-agent-starter

./: .env.example  .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  test_setup.py
agents/: __init__.py  judger_agent.py  orchestrator_agent.py  research_agent.py  writer_agent.py
prompts/: __init__.py  judger_prompt.py  research_prompt.py  writer_prompt.py
templates/: index.html
utils/: __init__.py  llm_client.py  output_manager.py  response_parser.py  temp_storage.py
